--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: groups_path do |f| %>
+<%= form_with model: @group do |f| %>
   <%= f.text_field :group_name, placeholder: "Group name" %>
   <%= f.submit "Create group" %>
 <% end %>
