Forgoted file to the last commit

--- a/app/views/exchange/index.html.erb
+++ b/app/views/exchange/index.html.erb
@@ -1,1 +1,6 @@
-<%= @random_participant.name if @random_participant %>
+<div class="random_participant" id="random_participant" data-participants="<%= @participants.to_json %>">
+  <div class="participants" id="participants">
+  </div>
+  <div class="gift_to">
+  </div>
+</div>
