--- a/app/assets/stylesheets/controllers/_exchange.scss
+++ b/app/assets/stylesheets/controllers/_exchange.scss
@@ -29,6 +29,16 @@
 .gift_to {
   opacity: 0;
   transition: 1.3s ease;
+  position: absolute;
+  font-size: 1.8rem;
+  background-color: rgba(193, 226, 245, 0.274);
+  padding: 0.8rem;
+  width: 300px;
+  border-radius: 5px;
+  box-shadow: 0 10px 12px -9px rgba(128, 128, 128, 0.295);
+  text-align: center;
+  font-weight: 800;
+  color: rgb(20, 161, 243);
 }
 
 @keyframes raffle {
