Snow styles completed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <div class="snow" id="snow">
+    </div>
     <main class="main">
       <div class="flash__message">
         <% flash.each do |type, msg| %>
