--- a/app/assets/stylesheets/controllers/_home.scss
+++ b/app/assets/stylesheets/controllers/_home.scss
@@ -2,6 +2,47 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1;
+}
+
+.snow {
+  position: absolute;
+  background-color: transparent;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
+
+  &__snowflake {
+    position: relative;
+    background-color: rgba(206, 225, 241, 0.829);
+    box-shadow: 1px 1px 3px 1px rgba(90, 90, 90, 0.247);
+    border-radius: 50%;
+    width: 100%;
+    transform: translate(0,-20px);
+    animation: snow linear infinite;
+
+    &--small { min-width: 0.5rem; max-height: 0.5rem; }
+    &--med { min-width: 0.8rem; max-height: 0.8rem; }
+    &--big { min-width: 1.1rem; max-height: 1.1rem; }
+  }
+}
+
+@keyframes snow {
+  0% {
+    transform: translate(0,-20px);
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(0, 90vh);
+  }
 }
