Minimum styles changes.

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -13,6 +13,7 @@ body {
   font-family: 'Montserrat', 'Verdana';
   width: 100vw;
   height: 100vh;
+  word-break: break-word;
   overflow: hidden;
 }
 
