--- a/app/assets/stylesheets/controllers/_exchange.scss
+++ b/app/assets/stylesheets/controllers/_exchange.scss
@@ -22,7 +22,8 @@
   div {
     margin: 5px;
     font-size: 1.1rem;
-    color: rgb(228, 228, 228);
+    color: rgb(40, 172, 90);
+    font-weight: bolder;
     animation: raffle 0.6s infinite alternate;
   }
 }
