--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
+<header>
+  <h1>Christmas exchange</h1>
+  <h4>Please start your exchange, create a new group and enojoy!!</h4>
+</header>
 <%= link_to "Create new group", new_group_path, class: "btn btn-link" %>
